# ros-madair

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  requirements-docs.txt  tsconfig.build.json  tsconfig.json  vite.config.js  zensical.toml
.github/workflows/: deploy-pages.yml  release.yml
crates/ros-madair-alizarin/: Cargo.toml
crates/ros-madair-alizarin/src/: lib.rs
crates/ros-madair-builder/: Cargo.toml  pyproject.toml
crates/ros-madair-builder/python/ros_madair/: __init__.py
crates/ros-madair-builder/src/: lib.rs
crates/ros-madair-client/: Cargo.toml
crates/ros-madair-client/src/: fetch.rs  lib.rs  page_cache.rs  planner.rs
crates/ros-madair-core/: Cargo.toml
crates/ros-madair-core/examples/: build_example.rs  build_from_prebuild.rs  diagnose.rs  diagnose_mismatch.rs  dump_dict.rs  generate_validation.rs  test_queries.rs
crates/ros-madair-core/src/: concept_intervals.rs  concept_tree.rs  datatype_class.rs  dictionary.rs  geo_convert.rs  hilbert.rs  lib.rs  local_engine.rs  page_assignment.rs  page_file.rs  quantize.rs  query.rs  rdf_export.rs  resource_map.rs  summary_quads.rs  tile_content_file.rs  tile_source_impl.rs  uri.rs  value_extract.rs
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/how-it-works/: data-structures.md  optimisations.md  overview.md  query-execution.md
docs/reference/: binary-formats.md  builder-api.md
docs/stylesheets/: extra.css
example/: build_sparnatural_assets.py  graph.html  index.html  serve.py  sparnatural.html  tiles.html
example/aonach_mor/: ATTRIBUTION.md  README.md
example/aonach_mor/arches_models/building/: nodes.csv
example/aonach_mor/arches_models/exposure/: graph.csv  nodes.csv
example/aonach_mor/arches_models/insurance_policy/: nodes.csv
example/aonach_mor/arches_models/observation/: graph.csv
example/aonach_mor/arches_models/organisation/: nodes.csv
example/aonach_mor/arches_models/person/: nodes.csv
example/aonach_mor/arches_models/scenario_event/: graph.csv  nodes.csv
example/aonach_mor/arches_models/sensor/: nodes.csv
example/aonach_mor/business_data/: building.csv  sensor.csv  site.csv
example/aonach_mor/geo/_build_logs/: rename_report.json
example/aonach_mor/geo/processed/: bbox.geojson  coastline.geojson  crs.json  gcc_boundary.geojson  iconic_wards.json  neighbourhoods.geojson  rivers.geojson  roads_primary.geojson  ward_boundaries.geojson
example/aonach_mor/geo/raw/: SOURCES.md  bbox.geojson  coastline.geojson  crs.json  gcc_boundary.geojson  iconic_wards.json  neighbourhoods.geojson  rivers.geojson  roads_primary.geojson  ward_boundaries.geojson
example/aonach_mor/graphs/resource_models/building/: collections.csv  graph.csv
example/aonach_mor/graphs/resource_models/exposure/: collections.csv
example/aonach_mor/graphs/resource_models/hazard_footprint/: collections.csv  graph.csv  nodes.csv
example/aonach_mor/graphs/resource_models/hazard_model/: collections.csv  graph.csv  nodes.csv
example/aonach_mor/graphs/resource_models/insurance_coverage/: collections.csv  graph.csv  nodes.csv
example/aonach_mor/graphs/resource_models/insurance_policy/: collections.csv  graph.csv
example/aonach_mor/graphs/resource_models/observation/: collections.csv  nodes.csv
example/aonach_mor/graphs/resource_models/organisation/: collections.csv  graph.csv
example/aonach_mor/graphs/resource_models/person/: collections.csv  graph.csv
example/aonach_mor/graphs/resource_models/scenario_event/: collections.csv
example/aonach_mor/graphs/resource_models/sensor/: collections.csv  graph.csv
example/aonach_mor/renaming/: chennai_to_aonach_mor.json
example/aonach_mor/vocab/bot/: REFERENCE.md  SOURCE.md  bot.rdf
example/aonach_mor/vocab/cidoc_crm/: SOURCE.md
example/aonach_mor/vocab/fibo/: .commit  REFERENCE.md  SOURCE.md
example/aonach_mor/vocab/geosparql/: REFERENCE.md  SOURCE.md  geosparql_v1_1.rdf
example/aonach_mor/vocab/prov_o/: REFERENCE.md  SOURCE.md  prov_o.rdf
example/aonach_mor/vocab/riskine/: .commit  REFERENCE.md  SOURCE.md  riskine.rdf
example/aonach_mor/vocab/skos/: AdminDivision.xml  ClusterType.xml  ConfidenceBand.xml  CoverageType.xml  EventType.xml  GEMTaxonomy.xml  HazardType.xml  HeritageStatus.xml  IntensityBand.xml  LimitBand.xml  Method.xml  ObservableProperty.xml  Sector.xml  SensorType.xml  ServiceRole.xml  SeverityBand.xml  SizeBand.xml  riskine_enums.xml
example/aonach_mor/vocab/sosa_ssn/: REFERENCE.md  SOURCE.md  sosa_ssn.rdf
js/: _wasm.ts  main.ts
scripts/: sync-version.sh
