[workspace]
members = [
    "crates/ros-madair-core",
    "crates/ros-madair-builder",
    "crates/ros-madair-client",
    "crates/ros-madair-alizarin",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.4"
authors = ["Phil Weir <phil.weir@flaxandteal.co.uk>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/flaxandteal/ros-madair"
homepage = "https://github.com/flaxandteal/ros-madair"
keywords = ["sparql", "wasm", "heritage", "rdf", "static-files"]
categories = ["database", "wasm", "web-programming"]

[profile.release]
opt-level = "s"
debug = true

[profile.dev]
debug = true


[workspace.dependencies]
alizarin-core = "0.2.1-alpha.68"

# For local development with a sibling alizarin checkout, add to .cargo/config.toml:
#   [patch.crates-io]
#   alizarin-core = { path = "../alizarin/crates/alizarin-core" }
