[package]
name = "ros-madair-alizarin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Combined WASM binary — Rós Madair SPARQL engine + alizarin heritage viewer"

[lib]
crate-type = ["cdylib"]

[dependencies]
ros-madair-core = { path = "../ros-madair-core" }
ros-madair-client = { path = "../ros-madair-client" }
alizarin-wasm = { git = "https://github.com/flaxandteal/alizarin", tag = "v0.2.1-alpha.68" }
alizarin-core.workspace = true

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
