[package]
name = "ros-madair-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PyO3 bindings for RosMadair — build-time index generation from alizarin data"

[lib]
name = "ros_madair"
crate-type = ["cdylib", "rlib"]

[dependencies]
ros-madair-core = { path = "../ros-madair-core" }
alizarin-core = "0.2.1-alpha.3"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
