[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ros-madair"
version = "0.1.0a4"
description = "Page-based static SPARQL query engine for alizarin data"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ros_madair.ros_madair"
python-source = "python"
