[package]
name = "ros-madair-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM client for RosMadair — browser-based SPARQL over page-based static files"

[lib]
crate-type = ["rlib"]

[dependencies]
ros-madair-core = { path = "../ros-madair-core" }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
rmp-serde = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "Window",
    "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
