[package]
name = "ros-madair-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core logic for RosMadair: RDF export, page-based indexing, and summary quads"

[dependencies]
alizarin-core = "0.2.1-alpha.3"
spargebra = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geojson = "0.24"
thiserror = "2"
rmp-serde = "1"

[dev-dependencies]
pretty_assertions = "1"
